--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   scrollbar-width: thin;
   scrollbar-color: #4b5563 #24303f;
   scrollbar-track-color: #1f2937;
+  font-family: Inter
 }
 
 body{
@@ -18,7 +19,26 @@ body{
   @apply w-[1em] h-[1em] overflow-hidden ;
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
+
+.container{
+  @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
+}
+
+.img-box{
+  @apply bg-zinc-700 overflow-hidden 
+}
+
+.img-cover{
+  @apply w-full h-full object-cover
+}
     }
+
+@layer typography{
+   .headline-1{
+  @apply text-5xl font-bold leading-tight
+}
+}
+
 
 
 @layer components{
@@ -55,6 +75,8 @@ body{
   .btn-secondary{
     @apply bg-zinc-50 text-zinc-900/80 hover:bg-amber-500 hover:font-bold active:bg-zinc-50/80
   }
+
+
 }
 /**
   *BASE STYLES
