--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,15 @@ body{
     }
 
 @layer typography{
+.headline-1 {
+  @apply max-w-max;
+  background: linear-gradient(0deg, #fafafa, #a1a1aa);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text; /* For Firefox support */
+}
    .headline-1{
-  @apply text-5xl font-bold leading-tight
+  @apply text-5xl font-semibold leading-tight lg:text-[55px] lg:leading-[1.15]
 }
 }
 
@@ -74,6 +81,22 @@ body{
 
   .btn-secondary{
     @apply bg-zinc-50 text-zinc-900/80 hover:bg-amber-500 hover:font-bold active:bg-zinc-50/80
+  }
+
+  .btn .material-symbols-rounded{
+    @apply text-[18px]
+  }
+
+    .btn:has(  .material-symbols-rounded){
+    @apply pr-3
+  }
+
+  .btn-primary{
+    @apply h-11 bg-sky-400 text-zinc-950 hover:bg-sky-300 hover:font-bold active:bg-sky-400
+  }
+  
+  .btn-outline{
+    @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
   }
 
 
