--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,10 @@ body{
     @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
   }
 
+  .section{
+    @apply pt-20 lg:pt-32
+  }
+
 
 }
 /**
